--- a/src/ca/ashbury/naif/calendar/calendar.fxml
+++ b/src/ca/ashbury/naif/calendar/calendar.fxml
@@ -3,17 +3,49 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.ashbury.naif.calendar.Controller">
-   <columnConstraints>
-      <ColumnConstraints />
-      <ColumnConstraints />
-   </columnConstraints>
-   <rowConstraints>
-      <RowConstraints />
-      <RowConstraints />
-   </rowConstraints>
-   <children>
-      <Button mnemonicParsing="false" onAction="#createEvent" text="Remind me in 5" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-      <Label fx:id="label" text="Label" />
-   </children>
+<GridPane xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ca.ashbury.naif.calendar.Controller">
+  <children>
+    <TableView GridPane.rowIndex="0">
+      <columns>
+        <TableColumn fx:id="id" prefWidth="100.0" text="ID" visible="false" />
+        <TableColumn fx:id="time" prefWidth="200.0" text="Time" />
+        <TableColumn fx:id="name" prefWidth="200.0" sortable="false" text="Name" />
+        <TableColumn fx:id="location" prefWidth="400.0" sortable="false" text="Location" />
+        <TableColumn fx:id="note" prefWidth="400.0" sortable="false" text="note" />
+      </columns>
+    </TableView>
+    <GridPane GridPane.rowIndex="1">
+      <children>
+        <TextField fx:id="tfTime" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowSpan="1" />
+        <TextField fx:id="tfName" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowSpan="1" />
+        <TextArea fx:id="taLocation" prefWidth="400.0" GridPane.columnIndex="3" GridPane.rowSpan="2" />
+        <TextArea fx:id="taNote" prefWidth="400.0" GridPane.columnIndex="4" GridPane.rowSpan="2" />
+        <TextArea fx:id="taNotify" prefWidth="400.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="1" />
+        <Button onAction="#createEvent" text="Add Event" GridPane.columnIndex="6" GridPane.rowIndex="1" />
+      </children>
+      <columnConstraints>
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+        <ColumnConstraints />
+      </columnConstraints>
+      <rowConstraints>
+        <RowConstraints />
+            <RowConstraints />
+      </rowConstraints>
+    </GridPane>
+  </children>
+  <columnConstraints>
+    <ColumnConstraints />
+    <ColumnConstraints />
+    <ColumnConstraints />
+  </columnConstraints>
+  <rowConstraints>
+    <RowConstraints />
+    <RowConstraints />
+    <RowConstraints />
+    <RowConstraints />
+  </rowConstraints>
 </GridPane>
