--- a/src/ca/ashbury/naif/calendar/calendar.fxml
+++ b/src/ca/ashbury/naif/calendar/calendar.fxml
@@ -13,22 +13,22 @@
             <PropertyValueFactory property="id" />
           </cellValueFactory>
         </TableColumn>
-        <TableColumn fx:id="time" prefWidth="200.0" text="Time">
+        <TableColumn fx:id="time" onEditCommit="#modifyTime" prefWidth="200.0" text="Time">
           <cellValueFactory>
             <PropertyValueFactory property="time" />
           </cellValueFactory>
         </TableColumn>
-        <TableColumn fx:id="name" prefWidth="200.0" sortable="false" text="Name">
+        <TableColumn fx:id="name" onEditCommit="#modifyName" prefWidth="200.0" sortable="false" text="Name">
           <cellValueFactory>
             <PropertyValueFactory property="name" />
           </cellValueFactory>
         </TableColumn>
-        <TableColumn fx:id="address" prefWidth="400.0" sortable="false" text="Location">
+        <TableColumn fx:id="address" onEditCommit="#modifyLocation" prefWidth="400.0" sortable="false" text="Location">
           <cellValueFactory>
             <PropertyValueFactory property="location" />
           </cellValueFactory>
         </TableColumn>
-        <TableColumn fx:id="note" prefWidth="400.0" sortable="false" text="note">
+        <TableColumn fx:id="note" onEditCommit="#modifyNote" prefWidth="400.0" sortable="false" text="note">
           <cellValueFactory>
             <PropertyValueFactory property="note" />
           </cellValueFactory>
@@ -41,10 +41,9 @@
         <TextField fx:id="tfName" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowSpan="1" />
         <TextArea fx:id="taLocation" prefWidth="400.0" GridPane.columnIndex="3" GridPane.rowSpan="3" />
         <TextArea fx:id="taNote" prefWidth="400.0" GridPane.columnIndex="4" GridPane.rowSpan="3" />
-        <TextArea fx:id="taNotify" prefWidth="400.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="1" />
+        <Label fx:id="laNotify" prefWidth="400.0" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" GridPane.rowSpan="1" />
         <Button onAction="#createEvent" text="Add Event" GridPane.columnIndex="6" GridPane.rowIndex="0" />
-        <Button onAction="#modifyEvent" text="Modify Event" GridPane.columnIndex="6" GridPane.rowIndex="1" />
-        <Button onAction="#deleteEvent" text="Delete Event" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+        <Button onAction="#deleteEvent" text="Delete Event" GridPane.columnIndex="6" GridPane.rowIndex="1" />
       </children>
       <columnConstraints>
         <ColumnConstraints />
@@ -58,6 +57,7 @@
       <rowConstraints>
         <RowConstraints />
         <RowConstraints />
+            <RowConstraints />
       </rowConstraints>
     </GridPane>
   </children>
